--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,12 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 
+    implementation "org.koin:koin-android:1.0.2"
+
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.amshove.kluent:kluent-android:1.48"
