--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.amshove.kluent:kluent-android:1.48"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.12.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
