--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.okhttp3:okhttp:3.12.0"
 
+    implementation "com.jakewharton.timber:timber:4.7.1"
+
     testImplementation 'junit:junit:4.12'
     testImplementation "org.amshove.kluent:kluent-android:1.48"
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
