--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.amshove.kluent:kluent-android:1.48"
-    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.12.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
