Add empty PostCommentsActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,13 @@
 
         <activity
             android:name=".ui.posts.PostsActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/posts_title" />
+            android:label="@string/posts_title"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ui.postcomments.PostCommentsActivity"
+            android:label="@string/postComments_title"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
